--- a/client/src/css/feed.css
+++ b/client/src/css/feed.css
@@ -255,133 +255,9 @@
     }
 }
 
-/* CSS for when screen size is in swipe mode */
-
-.small-feed-content{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: auto 0;
-    justify-content: center;
-    align-items: center;
-    /* padding: 3em 0; */
-    row-gap: 8vh;
-    max-height: 100%;
-    min-height: 100%;
-}
-
-.feed-img-container{
-    display: flex;
-    justify-content: center;
-}
-
-.small-feed-image-container{
-    min-width: 60vw;
-    max-width: 60vw;
-    /* min-width: calc(95vw - 50vh);
-    max-width: calc(95vw - 50vh); */
-    height: 60vh;
-    position: relative;
-    box-shadow: rgba(255, 255, 255, 0.4) 0px 5px 15px; 
-    /* flex: 1; */
-    transition: smooth;
-    z-index: 2;
-
-}
-
-.small-feed-img {
-    border: 6px solid white;
-    width: 100%;
-    height: 100%;
-}
-
-.img-text-overlay{
-    position: absolute;
-    background-color: black;
-    color: white;
-    top: 0;
-    left: 0;
-    width: 100%;
-    text-align: center;
-    opacity: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.img-text-overlay p {
-    margin: auto 0;
-    font-size: 28px;
-    font-weight: 700;
-}
-
-.save-text{
-    background-color: var(--mint);
-}
-
-.dislike-text{
-    background-color: var(--old-rose);
-}
-
-.next-img-container{
-    position: absolute;
-    /* margin: auto auto auto auto; */
-    
-    box-shadow: rgba(255, 255, 255, 0.4) 0px 5px 15px; 
-    z-index: 1;
-    min-width: 45vw;
-    max-width: 45vw;
-    height: 50vh;
-
-}
-
-.next-feed-img{
-    border: 6px solid white;
-    width: 100%;
-    height: 100%;
-}
-
-.small-feed-btns {
-    margin-top: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 8vw;
-}
-
-#small-save-button{
-    background-color: var(--mint);
-    color: var(--floral-white);
-    transition: 0.5s ease-out;
-    border: 1px solid var(--mint);
-    font-size: calc(1.33rem + 1vw);
-    width: calc(6.5rem + 5vw);
-    height: calc(2rem + 2vh);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#small-dismiss-button{
-    background-color: var(--old-rose);
-    color: var(--floral-white);
-    transition: 0.5s ease-out;
-    border: 1px solid var(--old-rose);
-    font-size: calc(1.33rem + 1vw);
-    width: calc(6.5rem + 5.5vw);
-    height: calc(2rem + 2vh);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#small-dismiss-button > svg, #small-save-button > svg{
-    height: calc(0.66rem + 2vh);
-}
-
 .not-loggedIn {
-    height: calc(100vh - 115px);
+    min-height: calc(100vh - 11vh);
+    max-height: calc(100vh - 11vh);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -389,52 +265,28 @@
     row-gap: 2rem;
 }  
 
-.not-loggedIn button{
+.not-loggedIn button, .limit-link button{
     background-color: var(--mint);
     border: 2px solid var(--mint);
 }
 
-.not-loggedIn button:hover{
+.not-loggedIn button:hover,  .limit-link button:hover{
     background-color: transparent;
     color: var(--mint);
 }
 
-@media screen and (max-width: 565px){
-    .small-feed-image-container{
-        /* min-width: 70vw;
-        max-width: 70vw; */
-        height: 52.5vh;
-    }
-
-    .next-img-container{
-        /* min-width: 55vw;
-        max-width: 55vw; */
-        height: 42.5vh;
-    }
+.limit-used-container{
+    min-height: calc(100vh - 11vh);
+    max-height: calc(100vh - 11vh);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 1.5rem;
+    color: var(--floral-white);
 }
 
-@media screen and (max-width: 426px){
-
-    #small-save-button, #small-dismiss-button{
-        width: calc(6.5rem + 5vw);
-        height: calc(2rem + 2vh);
-    }
-
-    #small-dismiss-button > svg, #small-save-button > svg{
-        height: calc(0.5rem + 2vh);
-    }
-}
-
-@media screen and (max-width: 375px){
-    .small-feed-image-container{
-        height: 50vh;
-        min-width: 70vw;
-        max-width: 70vw;
-    }
-
-    .next-img-container{
-        min-width: 55vw;
-        max-width: 55vw;
-        height: 40vh;
-    }
+.limit-text{
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.25rem;
 }
