--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -7,9 +7,10 @@ header{
     /* min-height: 115px; */
     padding: 20px 15px;
     box-shadow: rgba(255, 255, 255, 0.10) 0px 5px 15px;
-    background: linear-gradient(to bottom right, #F0EBD8, #eeecd6);
+    background: var(--header-background);
+    /* background-color: var(--floral-white); */
     height: var(--header-height);
-    position: sticky;
+    /* position: sticky; */
     top: 0;
     z-index: 3;
 }
