--- a/client/src/css/footer.css
+++ b/client/src/css/footer.css
@@ -2,33 +2,40 @@
     width: 100%;
     /* margin: 8em 0 0 0; */
     bottom: 0;
+    /* background: var(--footer-background); */
     background: var(--footer-background);
     padding: 20px 0 30px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
     color: var(--floral-white);
     /* box-shadow: rgba(255, 255, 255, 0.35) 0px 5px 15px; */
 } 
 
-.subscription {
+.footer-content{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 24px 0;
+    flex-direction: row;
+    justify-content: space-around;
+    align-content: center;
+    width: 100%;
+    margin-top: 1rem;
+    padding: 0 2rem;
 }
 
-.subscription-heading {
-    margin-bottom: 24px;
-    font-size: 24px;
+.footer-recommendation{
+    margin: auto 0;
+    
 }
 
-.subscription-text {
-    margin-bottom: 24px;
-    font-size: 20px;
+.footer-heading {
+    font-size: calc(1rem + 0.8vw);
+}
+
+.footer-text {
+    margin-bottom: 1.25rem;
+    font-size: calc(0.4rem + 0.8vw);
 }
 
 .input-area form{
@@ -43,12 +50,16 @@
     border: 2px solid var(--mint);
     color: var(--floral-white);
     background-color: var(--mint);
+    transition: 0.5s ease-out;
+    height: calc(1.5rem + 1.75vw);
+    padding: 0 20px;
 }
 
 .input-area form button:hover{
     color: var(--mint);
     border: 2px solid var(--mint);
     background-color: transparent;
+    box-shadow: rgba(255, 255, 255, 0.15) 0px 5px 15px;
 }
 
 .footer-input {
@@ -57,21 +68,44 @@
     margin-right: 10px;
     outline: none;
     border: none;
-    font-size: 18px;
-    border: 1px solid #fff;
+    font-size: calc(0.5rem + 0.8vw);
+    border: 1px solid var(--floral-white);
+    background-color: var(--floral-white);
+    color: var(--gunmetal);
+    height: calc(1.5rem + 1.75vw);
 }
 
-.footer-btn{
-    border: 1px solid var(--primary);
-    background-color: var(--primary);
-    border-radius: 2px;
-    color: white;
+.footer-input::placeholder{
+    color: var(--gunmetal);
+    font-size: calc(0.5rem + 0.8vw);
+}
+
+.links{
+    display: flex;
+    flex-direction: row;
+    margin: auto 0;
+    column-gap: 3vw;
+    color: var(--floral-white);
+}
+
+.footer-link{
+    border: 1px solid var(--floral-white);
+    border-radius: 5px;
     transition: 0.5s ease-out;
+    min-width: 5rem;
+    padding: 0.5rem 0.5rem;
+    text-decoration: none;
 }
 
-.footer-btn:hover{
-    border: 1px solid var(--green);
-    background-color: var(--green);
+.footer-link > p {
+    color: var(--floral-white);
+    margin: 0;
+    font-size: calc(0.5rem + 0.75vw);
+}
+
+.footer-link:hover{
+    border: 1px solid var(--mint);
+    box-shadow: rgba(255, 255, 255, 0.15) 0px 5px 15px;
 }
 
 .footer-links a {
@@ -83,31 +117,49 @@
     color: var(--old-rose);
 }
 
-/* Mobile L */
-@media screen and (max-width: 426px){
-    .subscription-heading {
-        font-size: 20px;
+@media screen and (max-width: 915px){
+    .footer-content{
+        flex-direction: column;
+        gap: 4vh;
     }
-    
-    .subscription-text {
-        font-size: 16px;
+
+    .footer-recommendation{
+        margin: auto;
+    }
+
+    .links{
+        margin: auto;
+    }
+}
+
+/* Mobile L */
+@media screen and (max-width: 440px){
+
+    .input-area form button{
+        font-size: calc(0.45rem + 1.75vw);
+    }
+
+    .links{
+        justify-content: center;
+        flex-wrap: wrap;
+        width: 50vw;
+        flex-direction: column;
+        row-gap: 1.5vh;
+    }
+}
+
+@media screen and (max-width: 350px){
+    .footer-content{
+        padding: 0 0.75rem
     }
 
     .input-area form{
-        padding: 0;
-    }
-
-    .footer-input {
-        width: 75%;
-        margin: 0;
-    }
-
-    .input-area form button{
-        width: 25%;
-        display: flex;
+        gap: 2.25vw;
+        flex-wrap: wrap;
         justify-content: center;
-        align-items: center;
-        text-align: center;
-        font-size: 12px;
+    }
+
+    .footer-input{
+        margin: 0;
     }
 }
