--- a/client/src/css/genreCard.css
+++ b/client/src/css/genreCard.css
@@ -5,7 +5,7 @@
     row-gap: 1em;
     column-gap: 1em;
     flex-wrap: wrap;
-    font-size: 25px;
+    font-size: calc(0.75rem + 1.75vw);
     margin: auto 0;
     padding: 1em 0;
     overflow: scroll;
@@ -45,33 +45,4 @@
 .genre-btn {
     padding: 0;
     margin: auto 0;
-}
-
-/* Laptop */
-@media screen and (max-width: 1025px){
-    .genre-card{
-        font-size: 22px;
-
-    }
-}
-
-/* tablet */
-@media screen and (max-width: 769px){
-    .genre-card{
-        font-size: 25px;
-    }
-}
-
-/* Mobile L */
-@media screen and (max-width: 426px){
-    .genre-card{
-        font-size: 20px;
-    }
-}
-
-/* Mobile S */
-@media screen and (max-width: 321px){
-    .genre-card{
-        font-size: 17px;
-    }
 }
