Made styling for login and signup the same, and adding checking the images to the current and finished books

--- a/client/src/css/genreCard.css
+++ b/client/src/css/genreCard.css
@@ -7,7 +7,7 @@
     flex-wrap: wrap;
     font-size: calc(0.75rem + 1.75vw);
     margin: auto 0;
-    padding: 1em 0;
+    padding: 0.66rem 0;
     overflow: scroll;
     -ms-overflow-style: none; /* for Internet Explorer, Edge */
     scrollbar-width: none; /* for Firefox */
