--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -11,14 +11,13 @@
 }
 
 .login-items{
-    padding: 20px;
+    padding: 0, 20px, 20px, 20px;
 }
 
 .login-form{
     text-align: center;
     position: relative;
-    /* margin-top: 30px; */
-    height: 30rem;
+    height: 20rem;
     box-shadow: none;
     background-color: transparent;
     width: 100%;
@@ -29,12 +28,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 2.5rem;
+    /* gap: 1.5rem; */
     border: 0 none;
     border-radius: 0px;
-    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+    box-shadow: rgba(255, 255, 255, 0.30) 0px 5px 15px;
     padding: 20px 30px;
-    /* box-sizing: border-box; */
     width: 80%;
     margin: auto;
     height: 100%;
@@ -46,12 +44,14 @@
     width: 100%;
     padding: 15px;
     font-size: 13px;
+    font-family: serif;
 }
 
 .personal-details{
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    margin-top: 0;
+    margin: auto 0;
     gap: 1.5rem;
 }
 
@@ -65,11 +65,10 @@
     display: none;
 }
 
-.Btn {
+.login-Btn {
     display: flex;
     justify-content: center;
-    gap: 1em;
-    margin: 0 auto;
+    margin: 0.66rem auto 0.33rem auto;
 }
 
 .action-btn{
@@ -81,6 +80,7 @@
     background-color: var(--mint);
     color: var(--floral-white);
     transition: 0.5s ease-out;
+    font-weight: 700;
 }
 
 .action-btn:hover{
@@ -88,7 +88,12 @@
     color: var(--mint);
 }
 
-@media screen and (max-width: 426px){
+.to-signup{
+    font-weight: 700;
+    font-size: calc(0.70rem + 0.66vw);
+}
+
+@media screen and (max-width: 500px){
 
     .login-form {
         padding: 20px 2rem;
