--- a/client/src/css/library.css
+++ b/client/src/css/library.css
@@ -8,6 +8,12 @@
     min-height: calc(100vh - 11vh);
 }
 
+@media screen and (max-width: 756px){
+    .library-container {
+        min-height: 100vh;
+    }  
+}
+
 .library-selection{
     height: fit-content;
     width: 75%;
