--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -92,6 +92,13 @@
     font-size: calc(0.70rem + 0.66vw);
 }
 
+@media screen and (max-width: 756px){
+    .login-container {
+        min-height: 100vh;
+        max-height: 100vh;
+    }  
+}
+
 @media screen and (max-width: 500px){
 
     .login-form {
